testData/diagnostics/base_as_array_assign.diag.txt
testData/diagnostics/base_as_array_assign.nut line = (1) column = (0) : error: can't assign to expression
base["x"] = 1
^--------

